--- a/templates/customers/c_editprofile.html
+++ b/templates/customers/c_editprofile.html
@@ -31,7 +31,7 @@
                                                 {% endif %}
                                                 <div class="mt-3">
                                                     <h4>{{profile.user.first_name}} {{profile.user.last_name}}</h4>
-                                                    <p class="text-secondary mb-1">Full Stack Developer</p>
+                                                    {% comment %} <p class="text-secondary mb-1">Full Stack Developer</p> {% endcomment %}
                                                     <p class="text-muted font-size-sm">{{profile.address}},<br>{{profile.city}}, {{profile.pin_code}}.</p>
 
                                                 </div>
