--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -15,9 +15,9 @@
                 <div class="collapse navbar-collapse justify-content-between nav-item-wf" id="navbarCollapse">
                     <div class="navbar-nav">
                         <a href="{% url 'home' %}" class="nav-item nav-link">Home</a>
-                        <a href="#" class="nav-item nav-link">About us</a>
-                        <a href="#" class="nav-item nav-link">Services</a>
-                        <a href="#" class="nav-item nav-link">Contact us</a>
+                        <a href="{% url 'services' %}" class="nav-item nav-link">Services</a>
+                        <a href="{% url 'about-us' %}" class="nav-item nav-link">About us</a>
+                        <a href="{% url 'contact-us' %}" class="nav-item nav-link">Contact us</a>
                         {% comment %} <a href="#" class="nav-item nav-link">Feedback</a> {% endcomment %}
                         
                     </div>
