--- a/wc/static/css/custome.css
+++ b/wc/static/css/custome.css
@@ -220,3 +220,30 @@
     /* height: 750px; */
     background-color: white;
 }
+
+#loader {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #loader img {
+    width: 50px;
+    height: 50px;
+  }
+  
+.hr-services{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.box-services{
+    height: 200px !important
+}
